fixed header and landing page center aligned

--- a/myvote.client/src/App.css
+++ b/myvote.client/src/App.css
@@ -1,4 +1,4 @@
-﻿#root {
+﻿/* #root {
     max-width: 100%;
     text-align: center;
     width: 100%;
@@ -6,5 +6,5 @@
     display: flex;
     flex-direction: column;
 }
-
+ */
 
