--- a/myvote.client/src/pages/LandingPage.css
+++ b/myvote.client/src/pages/LandingPage.css
@@ -21,6 +21,10 @@ th, td {
     
 }
 
+#root{
+    width: 100%;
+}
+
 .header-search {
     flex: 1;
     display: flex;
